AG-3390 - Fix automated example mouse mask/row dragged object overlapping the site header

--- a/external/ag-website-shared/src/components/site-header/SiteHeader.module.scss
+++ b/external/ag-website-shared/src/components/site-header/SiteHeader.module.scss
@@ -9,7 +9,7 @@
     @media screen and (min-width: $breakpoint-docs-nav-medium) {
         position: sticky;
         top: 0;
-        z-index: 6; // needed in order to prevent grid z-indexes overlapping on small height
+        z-index: 10001; // needed in order to prevent grid z-indexes overlapping on small height
     }
 
     #{$selector-darkmode}:not(:has([data-is-homepage])) &,
